// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden — basic > 1v1 Briar mirror (대칭) 1`] = `
{
  "duration": 10.1,
  "logCounts": {
    "ability": 6,
    "attack": 25,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "1v1 Briar mirror (대칭)",
  "seed": 42,
  "snapshotCount": 304,
  "units": [
    {
      "alive": true,
      "attackCount": 13,
      "castCount": 3,
      "championApi": "TFT17_Briar",
      "finalHp": 54.44,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 650,
      "starLevel": 1,
      "team": "player",
      "totalDamageDealt": 733.33,
      "totalDamageTaken": 680,
    },
    {
      "alive": false,
      "attackCount": 12,
      "castCount": 3,
      "championApi": "TFT17_Briar",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 650,
      "starLevel": 1,
      "team": "enemy",
      "totalDamageDealt": 680,
      "totalDamageTaken": 733.33,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — basic > 1v1 Jinx+IE vs Briar (단일 스탯 아이템) 1`] = `
{
  "duration": 9.6333,
  "logCounts": {
    "ability": 3,
    "attack": 19,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "1v1 Jinx+IE vs Briar (단일 스탯 아이템)",
  "seed": 42,
  "snapshotCount": 290,
  "units": [
    {
      "alive": false,
      "attackCount": 8,
      "castCount": 1,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 990,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1138.43,
      "totalDamageTaken": 1033,
    },
    {
      "alive": true,
      "attackCount": 11,
      "castCount": 2,
      "championApi": "TFT17_Briar",
      "finalHp": 155.53,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 1170,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1033,
      "totalDamageTaken": 1138.43,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — basic > 2v2 Akali+Jinx vs Belveth+Illaoi 1`] = `
{
  "duration": 15.3333,
  "logCounts": {
    "ability": 10,
    "attack": 47,
    "death": 2,
    "move": 16,
    "status_expire": 1,
  },
  "scenarioName": "2v2 Akali+Jinx vs Belveth+Illaoi",
  "seed": 1337,
  "snapshotCount": 461,
  "units": [
    {
      "alive": false,
      "attackCount": 10,
      "castCount": 3,
      "championApi": "TFT17_Akali",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 1350,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 889.67,
      "totalDamageTaken": 1445.57,
    },
    {
      "alive": false,
      "attackCount": 12,
      "castCount": 1,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "player-1",
      "killCount": 0,
      "maxHp": 990,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 973.12,
      "totalDamageTaken": 905.7,
    },
    {
      "alive": true,
      "attackCount": 15,
      "castCount": 3,
      "championApi": "TFT17_Belveth",
      "finalHp": 1350,
      "id": "enemy-0",
      "killCount": 2,
      "maxHp": 1350,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1666.96,
      "totalDamageTaken": 86.21,
    },
    {
      "alive": true,
      "attackCount": 10,
      "castCount": 1,
      "championApi": "TFT17_Illaoi",
      "finalHp": 203.42,
      "id": "enemy-1",
      "killCount": 0,
      "maxHp": 1980,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 684.31,
      "totalDamageTaken": 1776.58,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — combined items > Akali+Bloodthirster vs Illaoi 1`] = `
{
  "duration": 15.4667,
  "logCounts": {
    "ability": 7,
    "attack": 27,
    "death": 1,
    "move": 11,
    "status_expire": 1,
  },
  "scenarioName": "Akali+Bloodthirster vs Illaoi",
  "seed": 7,
  "snapshotCount": 465,
  "units": [
    {
      "alive": true,
      "attackCount": 17,
      "castCount": 5,
      "championApi": "TFT17_Akali",
      "finalHp": 849,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 1350,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 2079.38,
      "totalDamageTaken": 670.34,
    },
    {
      "alive": false,
      "attackCount": 10,
      "castCount": 1,
      "championApi": "TFT17_Illaoi",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 1980,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 670.34,
      "totalDamageTaken": 2079.38,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — combined items > Aurora+Rabadon vs Rammus 1`] = `
{
  "duration": 19.5,
  "logCounts": {
    "ability": 4,
    "attack": 30,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Aurora+Rabadon vs Rammus",
  "seed": 7,
  "snapshotCount": 586,
  "units": [
    {
      "alive": false,
      "attackCount": 17,
      "castCount": 2,
      "championApi": "TFT17_Aurora",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 1260,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 819.37,
      "totalDamageTaken": 1321.44,
    },
    {
      "alive": true,
      "attackCount": 13,
      "castCount": 1,
      "championApi": "TFT17_Rammus",
      "finalHp": 1520.63,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1321.44,
      "totalDamageTaken": 819.37,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — combined items > Belveth+Deathblade vs Briar 1`] = `
{
  "duration": 10.9,
  "logCounts": {
    "ability": 4,
    "attack": 25,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Belveth+Deathblade vs Briar",
  "seed": 42,
  "snapshotCount": 328,
  "units": [
    {
      "alive": true,
      "attackCount": 10,
      "castCount": 2,
      "championApi": "TFT17_Belveth",
      "finalHp": 243.4,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 1350,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1447.28,
      "totalDamageTaken": 1267.45,
    },
    {
      "alive": false,
      "attackCount": 15,
      "castCount": 3,
      "championApi": "TFT17_Briar",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 1170,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1267.45,
      "totalDamageTaken": 1447.28,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — combined items > Briar+Titans vs Jinx 1`] = `
{
  "duration": 4.1667,
  "logCounts": {
    "ability": 2,
    "attack": 12,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Briar+Titans vs Jinx",
  "seed": 101,
  "snapshotCount": 126,
  "units": [
    {
      "alive": true,
      "attackCount": 9,
      "castCount": 2,
      "championApi": "TFT17_Briar",
      "finalHp": 1075.05,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 1170,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1018.41,
      "totalDamageTaken": 217.16,
    },
    {
      "alive": false,
      "attackCount": 3,
      "castCount": 0,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 990,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 217.16,
      "totalDamageTaken": 1018.41,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — combined items > Illaoi+BrambleVest+Archangels vs Akali (혼합 경로) 1`] = `
{
  "duration": 21.6333,
  "logCounts": {
    "ability": 9,
    "attack": 38,
    "death": 1,
    "move": 13,
    "status_expire": 1,
  },
  "scenarioName": "Illaoi+BrambleVest+Archangels vs Akali (혼합 경로)",
  "seed": 5,
  "snapshotCount": 650,
  "units": [
    {
      "alive": false,
      "attackCount": 14,
      "castCount": 1,
      "championApi": "TFT17_Illaoi",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 1980,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 968.28,
      "totalDamageTaken": 2014.59,
    },
    {
      "alive": true,
      "attackCount": 24,
      "castCount": 8,
      "championApi": "TFT17_Akali",
      "finalHp": 515.89,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 1350,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 2014.59,
      "totalDamageTaken": 968.28,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — combined items > Jinx+Guinsoos vs Illaoi 1`] = `
{
  "duration": 4.9333,
  "logCounts": {
    "ability": 3,
    "attack": 28,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Jinx+Guinsoos vs Illaoi",
  "seed": 101,
  "snapshotCount": 149,
  "units": [
    {
      "alive": true,
      "attackCount": 26,
      "castCount": 3,
      "championApi": "TFT17_Jinx",
      "finalHp": 810,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 990,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 2007.2,
      "totalDamageTaken": 180,
    },
    {
      "alive": false,
      "attackCount": 2,
      "castCount": 0,
      "championApi": "TFT17_Illaoi",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 1980,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 180,
      "totalDamageTaken": 2007.2,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — combined items > Jinx+IE+Deathblade vs Illaoi (누적 StatPatch) 1`] = `
{
  "duration": 16.2333,
  "logCounts": {
    "ability": 3,
    "attack": 23,
    "death": 1,
    "move": 6,
    "status_expire": 1,
  },
  "scenarioName": "Jinx+IE+Deathblade vs Illaoi (누적 StatPatch)",
  "seed": 11,
  "snapshotCount": 488,
  "units": [
    {
      "alive": true,
      "attackCount": 13,
      "castCount": 1,
      "championApi": "TFT17_Jinx",
      "finalHp": 110,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 990,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 2014.84,
      "totalDamageTaken": 780,
    },
    {
      "alive": false,
      "attackCount": 10,
      "castCount": 1,
      "championApi": "TFT17_Illaoi",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 1980,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 780,
      "totalDamageTaken": 2014.84,
    },
  ],
  "winner": "player",
}
`;
